Fix download dialog button overflowing on mobile

--- a/src/components/FanKit/index.css
+++ b/src/components/FanKit/index.css
@@ -54,3 +54,7 @@
 .FanKit__download:hover::before {
   background-color: var(--beige);
 }
+
+.FanKit__CTA {
+  min-width: 0;
+}
